--- a/Conword.html
+++ b/Conword.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.css" />
     <title>Conword</title>
     <link rel="icon" href="./icon.png">
     <!-- ลิงก์สำหรับ drag and drop -->
@@ -16,11 +15,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.css"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/dragula-auto-scroll@2.0.0/scroll.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
         
         <div class="footer">
-      เวอร์ชัน 02.03.11  06/09/67 15.48 น.
+      เวอร์ชัน 02.03.01  06/09/67 15.48 น.
       <div> <a href="https://www.canva.com/design/DAGQm3V8WFA/FJqJY5z6LUMYFrRvCZsr2w/edit?utm_content=DAGQm3V8WFA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">คู่มือ</a></div>
       
     </div>
@@ -304,13 +301,6 @@
     transition: all 0.3s ease; /* เพิ่มการเปลี่ยนแปลงนุ่มนวล */
 }
 
-.dragging {
-    opacity: 0.8;
-    transform: scale(1.05); /* ขยายรายการเล็กน้อยให้ดูเหมือนลอย */
-    transition: transform 0.2s ease, opacity 0.2s ease;
-}
-
-
 @media (max-width: 900px) {
     #clock {
         font-size: 14px; /* ลดขนาดอักษร */
@@ -574,92 +564,27 @@ window.onload = function() {
     textEditor.focus();
     }
 
-    // เริ่มการลากและจัดเรียงด้วย Dragula ----------------------------------------------------------------
-    document.addEventListener("DOMContentLoaded", function() {
-            var container = document.getElementById('clipList');
-            var isTouchDevice = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
+    // เริ่มการลากและจัดเรียงด้วย Dragula
+        document.addEventListener("DOMContentLoaded", function() {
+        var container = document.getElementById('clipList');
 
-            if (!isTouchDevice) {
-                // Dragula สำหรับ PC
-                var drake = dragula([container], {
-                    moves: function (el, source, handle, sibling) {
-                        return true; // อนุญาตให้ลากได้
-                    }
-                });
+        var drake = dragula([container]);
 
-                drake.on('drop', function() {
-                    saveClipListToLocalStorage(); // บันทึกลำดับใหม่ลงใน localStorage
-                });
-            } else {
-                // Lock the items initially
-                container.classList.add('locked');
+        // เพิ่มฟังก์ชันเลื่อนอัตโนมัติเมื่อทำการลาก
+        autoScroll([window], {
+            margin: 20,  // ระยะห่างจากขอบหน้าจอเมื่อเริ่มการเลื่อน
+            maxSpeed: 10,  // ความเร็วสูงสุดในการเลื่อน
+            scrollWhenOutside: true // เลื่อนเมื่ออยู่ภายนอก container
+        }).listen(drake);
 
-                var longPressTimer;
-                var sortable;
-                var draggingElement;
-
-                // ตั้งค่า touch event
-                container.addEventListener('touchstart', function(event) {
-                    var target = event.target.closest('li'); // ตรวจสอบว่าถูกกดที่รายการ 'li'
-
-                    if (target) {
-                        // เริ่มจับเวลาหลังจากกดค้าง 1 วินาที
-                        longPressTimer = setTimeout(function() {
-                            // เปิดการลากวาง
-                            sortable = Sortable.create(container, {
-                                animation: 150,
-                                onStart: function(evt) {
-                                    target.classList.add('dragging'); // เพิ่มคลาส dragging
-                                },
-                                onEnd: function() {
-                                    saveClipListToLocalStorage(); // บันทึกลำดับใหม่ลงใน localStorage
-                                    target.classList.remove('dragging'); // ลบคลาส dragging
-                                    lockItems(); // ล็อกรายการเมื่อเสร็จสิ้น
-                                }
-                            });
-                            target.classList.add('dragging'); // เพิ่มคลาส dragging
-                            sortable.start(); // เริ่มการลาก
-                            draggingElement = target; // บันทึกรายการที่ถูกลาก
-                        }, 1000); // กดค้าง 1 วินาที
-                    }
-                });
-
-                container.addEventListener('touchend', function() {
-                    clearTimeout(longPressTimer); // ยกเลิกการจับเวลาหากปล่อยก่อน 1 วินาที
-
-                    if (draggingElement) {
-                        // นำคลาส "dragging" ออกเมื่อปล่อย
-                        draggingElement.classList.remove('dragging');
-                        draggingElement = null; // รีเซ็ตตัวแปร
-                        lockItems(); // ล็อกรายการเมื่อปล่อย
-                    }
-                });
-
-                container.addEventListener('touchmove', function() {
-                    // ตรวจสอบว่ากำลังลากอยู่
-                    if (sortable) {
-                        sortable._onTouchMove(event); // เรียกใช้ฟังก์ชันการลากตามการเคลื่อนไหว
-                    }
-                });
-
-                // ฟังก์ชันล็อกรายการ
-                function lockItems() {
-                    container.classList.add('locked');
-                    if (sortable) {
-                        sortable.destroy(); // ทำลาย sortable หากมี
-                    }
-                }
-            }
-
-            // ฟังก์ชันบันทึกลิสต์ใน localStorage
-            function saveClipListToLocalStorage() {
-                var items = Array.from(container.querySelectorAll('li'));
-                var clipListOrder = items.map(function(item) {
-                    return item.textContent; // หรือข้อมูลที่คุณต้องการบันทึก
-                });
-                localStorage.setItem('clipListOrder', JSON.stringify(clipListOrder));
-            }
+        // เมื่อมีการเปลี่ยนลำดับรายการ
+        drake.on('drop', function () {
+            saveClipListToLocalStorage(); // บันทึกลำดับใหม่ลง localStorage
         });
+    });
+
+
+
 
 
         // ฟังก์ชันล้างรายการทั้งหมดใน clipList และลบข้อมูลจาก localStorage พร้อมการยืนยัน
