--- a/Conword.html
+++ b/Conword.html
@@ -16,7 +16,7 @@
 
     <!-- ส่วนของเนื้อหา -->
     <div class="footer">
-        เวอร์ชัน 03.02.00  26/09/67 13.00 น.
+        เวอร์ชัน 03.02.01  03/10/67 11.00 น.
         <div>
             <a href="https://www.canva.com/design/DAGQm3V8WFA/FJqJY5z6LUMYFrRvCZsr2w/edit?utm_content=DAGQm3V8WFA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
                 คู่มือ
@@ -979,7 +979,7 @@ function performAdditionalReplacements(text) {
     text = text.replace(/เป็นไง/g, "เป็นอย่างไร");
     text = text.replace(/พร้อมเพียง/g, "พร้อมเพรียง");
     text = text.replace(/ค่าลด/g, "ค่ารถ");
-
+    text = text.replace(/ {3}: {4}/g, "   :   ");
 
     //สิ้นสุดช่วงแก้ไขคำ 
 
