--- a/Conword.html
+++ b/Conword.html
@@ -979,6 +979,7 @@ function performAdditionalReplacements(text) {
     text = text.replace(/เป็นไง/g, "เป็นอย่างไร");
     text = text.replace(/พร้อมเพียง/g, "พร้อมเพรียง");
     text = text.replace(/ค่าลด/g, "ค่ารถ");
+    text = text.replace(/วีดีโอ/g, "วิดีโอ");
     text = text.replace(/ {3}: {4}/g, "   :   ");
 
     //สิ้นสุดช่วงแก้ไขคำ 
